# bayesian-testing

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: coverage.yml  release.yml  tests.yml
bayes_ab_test/: __init__.py
bayes_ab_test/experiments/: __init__.py  base.py  binary.py  conversion.py  delta_lognormal.py  normal.py
bayes_ab_test/metrics/: __init__.py  pbbs.py  posteriors.py  simulations.py
bayes_ab_test/utilities/: __init__.py  common.py  logging.py
bayesian_testing/experiments/: __init__.py  base.py  binary.py  delta_exponential.py  delta_lognormal.py  delta_normal.py  dirichlet.py  discrete.py  exponential.py  normal.py  poisson.py
bayesian_testing/metrics/: __init__.py  evaluation.py  pbbs.py  posteriors.py
bayesian_testing/utilities/: common.py  logging.conf
config/: logging.conf
examples/: Untitled.ipynb  bayesian_ab_testing.ipynb  dice_rolls_ab_testing.ipynb  goals_scored_ab_testing.ipynb  session_data_ab_testing.ipynb  session_data_manual_pbbs.ipynb  simple_agg_usage.ipynb  waiting_time_ab_testing.ipynb
examples/data/: session_data.csv
tests/: README.md  test_binary.py  test_delta_lognormal.py  test_delta_normal.py  test_discrete.py  test_evaluation.py  test_experiment_conversion.py  test_exponential.py  test_normal.py  test_pbbs.py  test_poisson.py  test_posteriors.py  test_validators.py
