[tool.poetry]
name = "bayesian-testing"
version = "0.5.4"
description = "Bayesian A/B testing with simple probabilities."
authors = ["Matus Baniar"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Matt52/bayesian-testing"
repository = "https://github.com/Matt52/bayesian-testing"
keywords = ["ab testing", "bayes", "bayesian statistics"]
include = [
    "LICENSE",
]

packages = [
    {include = "bayesian_testing"}
]

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.19.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.5.1"
black = "^22.3"
pytest = "^6.2.4"
coverage = "^6.1.1"
pandas = "^1.2.1"
pre-commit = "^2.16.0"
isort = "^5.10.1"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
