[tool.poetry]
name = "bayesian-testing"
version = "0.9.0"
description = "Bayesian A/B testing with simple probabilities."
authors = ["Matus Baniar"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Matt52/bayesian-testing"
repository = "https://github.com/Matt52/bayesian-testing"
keywords = ["ab testing", "bayes", "bayesian statistics"]
include = [
    "LICENSE",
]

packages = [
    {include = "bayesian_testing"}
]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.19"

[tool.poetry.group.dev.dependencies]
jupyter = ">=1.1"
jupyterlab = ">=4.3"
black = ">=23.1"
pytest = ">=8.3"
coverage = ">=7.6"
pandas = ">=1.5"
pre-commit = ">=3.1"
isort = ">=5.10"
tabulate = ">=0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
